website/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-website
  namespace: staging
  labels:
    app: my-website
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-website
  template:
    metadata:
      labels:
        app: my-website
    spec:
      containers:
        - name: website
          image: public.ecr.aws/r9u2q4e0/my-static-website:latest
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: true
          resources:
            limits:
              cpu: "250m"
              memory: "128Mi"
          ports:
            - containerPort: 80
