website/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: staging
  name: website-service
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: my-website
